[gd_scene load_steps=7 format=3 uid="uid://kvgxpb4fxnwf"]

[ext_resource type="Script" path="res://Player/Attacks/ArrowShot/arrow.gd" id="1_x83n7"]
[ext_resource type="Texture2D" uid="uid://f76b35l6qiir" path="res://Art/Player/Attacks/arrow.png" id="2_yjdaw"]
[ext_resource type="PackedScene" uid="uid://caufekfovd6qa" path="res://Util/Components/hitbox_component.tscn" id="3_5hthx"]
[ext_resource type="AudioStream" uid="uid://bgus8xb6rjdki" path="res://Audio/ArrowSong.wav" id="4_11s5w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fcfs"]
size = Vector2(4, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p32mm"]
size = Vector2(14.75, 5)

[node name="Arrow" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_x83n7")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
rotation = 2.35619
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_yjdaw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8fcfs")

[node name="HitboxComponent" parent="." instance=ExtResource("3_5hthx")]
collision_layer = 8
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0.375, 0)
shape = SubResource("RectangleShape2D_p32mm")

[node name="ArrowAttackSong" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_11s5w")
volume_db = -10.0
pitch_scale = 1.5
autoplay = true

[connection signal="body_entered" from="HitboxComponent" to="." method="_on_hitbox_component_body_entered"]
